# libgolf

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
.github/workflows/: build_and_test_libshotscope.yml  ci-multi-platform.yml  code-coverage.yml  pages.yml  release.yml  static-analysis.yml
cmake/: golfConfig.cmake.in
docs/: aerodynamic_model.md  bounce_model.md  ground_providers.md  how.md  roll_model.md  terrain.md  wasm.md
examples/: calculate_ball_landing.cpp  calculate_ball_trajectory.cpp  custom_aerodynamic_model.cpp  custom_bounce_model.cpp  custom_roll_model.cpp  multi_ground_simulation.cpp
examples/web/: index.html
include/: AerodynamicModel.hpp  BallProperties.hpp  BallState.hpp  BounceModel.hpp  DefaultAerodynamicModel.hpp  DefaultBounceModel.hpp  DefaultIntegrator.hpp  DefaultRollModel.hpp  FlightPhase.hpp  FlightSimulator.hpp  GolfBallPhysicsVariables.hpp  Integrator.hpp  RollModel.hpp  ShotPhysicsContext.hpp  atmosphere.hpp  atmospheric_data.hpp  golf_ball.hpp  ground_physics.hpp  ground_surface.hpp  launch_data.hpp  libgolf.hpp  math_utils.hpp  physics_constants.hpp  terrain_interface.hpp
src/: FlightPhase.cpp  FlightSimulator.cpp  GolfBallPhysicsVariables.cpp  ShotPhysicsContext.cpp  ground_physics.cpp  math_utils.cpp  terrain_interface.cpp
test/: test_aerodynamic_model.cpp  test_ball_physics_vars.cpp  test_bounce_model.cpp  test_bounce_phase.cpp  test_default_bounce_model.cpp  test_default_roll_model.cpp  test_dynamic_terrain.cpp  test_flight_simulator.cpp  test_ground_physics.cpp  test_ground_provider.cpp  test_roll_model.cpp  test_roll_phase.cpp  test_terrain_interface.cpp
test/data/: shots_reference.csv
tools/calibration/: README.md  run.py  sim_runner.cpp
wasm/: bindings.cpp
